best viewed on toby's lenovo thinkbook 14 G3 ACL 21A2

--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
   font-weight: 400;
   font-style: normal;
   src: url("fonts/ubuntu-latin-400-normal.woff2") format("woff2"), url("fonts/ubuntu-latin-400-normal.woff") format("woff");
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   font-weight: 700;
   font-style: normal;
   src: url("fonts/ubuntu-latin-700-normal.woff2") format("woff2"), url("fonts/ubuntu-latin-700-normal.woff") format("woff");
+  font-display: swap;
 }
 
 body {
@@ -20,7 +22,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   margin: 1.5rem auto;
-  width: 70vw;
+
+  @media screen and (min-width: 1024px) {
+    width: 70vw;
+  }
+
+  width: 90vw;
 
   font-size: 1.2rem;
 }
