--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ img:hover {
 
 #logo:hover,
 #logo:active {
-  scale: 3;
+  scale: 4;
 }
 
 .bigZoom:hover,
@@ -124,9 +124,11 @@ p {
   }
 }
 
-.projectDescription {
+.project > * {
   width: 100%;
+}
 
+.projectDescription {
   padding: 1rem;
 }
 
