--- a/root.css
+++ b/root.css
@@ -31,6 +31,10 @@ body {
 
   font-size: 1.2rem;
 
+  @media screen and (max-width: 1024px) {
+    font-size: 1.05rem;
+  }
+
   transition: background-color 0.5s ease-in-out;
 }
 
@@ -47,6 +51,10 @@ p {
 
 h1 {
   font-size: 3.25rem;
+
+  @media screen and (max-width: 1024px) {
+    font-size: 3rem;
+  }
 }
 
 ul li {
