--- a/imgzoom.css
+++ b/imgzoom.css
@@ -1,5 +1,11 @@
 img {
-  transition: scale 0.5s ease-in-out, border-radius 0.5s ease-in-out;
+  position: relative;
+  transition: scale 0.5s ease-in-out, border-radius 0.5s ease-in-out, z-index 0.5s ease-in-out;
+  z-index: 1;
+}
+
+img:hover {
+  z-index: 10;
 }
 
 img:hover {
