fix bouncing cat hitting body margin bounds

--- a/root.css
+++ b/root.css
@@ -14,7 +14,7 @@
   font-display: swap;
 }
 
-body {
+#app {
   font-family: Ubuntu, system-ui, sans-serif;
 
   text-rendering: optimizeLegibility;
