--- a/root.css
+++ b/root.css
@@ -1,3 +1,5 @@
+@import url("/rainbow.css");
+
 @font-face {
   font-family: "Ubuntu";
   font-weight: 400;
@@ -12,6 +14,19 @@
   font-style: normal;
   src: url("fonts/ubuntu-latin-700-normal.woff2") format("woff2"), url("fonts/ubuntu-latin-700-normal.woff") format("woff");
   font-display: swap;
+}
+
+body {
+  background-color: var(--background-color);
+}
+
+* {
+  color: var(--text-color);
+}
+
+input,
+button {
+  background-color: var(--interactive-background-color);
 }
 
 #app {
