--- a/index.css
+++ b/index.css
@@ -50,16 +50,13 @@
   height: 30vh;
   width: 40vw;
 
-  @media screen and (max-width: 1600px) {
+  /* @media screen and (max-width: 1400px) {
     width: 80vw;
-  }
+  } */
 
   @media screen and (max-width: 1024px) {
     height: unset;
     width: 90vw;
-  }
-
-  @media screen and (max-width: 1024px) {
     flex-direction: column;
   }
 
@@ -69,6 +66,8 @@
 .project img {
   border-radius: 1.85rem 0 0 1.85rem;
   height: 100%;
+  width: 100%;
+  object-fit: cover;
 
   @media screen and (max-width: 1024px) {
     border-radius: 1.85rem 1.85rem 0 0;
@@ -78,7 +77,7 @@
 }
 
 .project > * {
-  width: 100%;
+  flex: 1;
 }
 
 .projectDescription {
