--- a/index.css
+++ b/index.css
@@ -89,3 +89,23 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.hardwareProjects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
+
+.hardwareProjects > div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+}
+
+.hardwareProjects > div img:first-of-type {
+  height: max(12vh, 12vw);
+  width: auto;
+}
