--- a/index.css
+++ b/index.css
@@ -1,13 +1,6 @@
 #logo {
-  width: 32px;
+  width: 3rem;
   height: auto;
-}
-
-#logo:hover,
-#logo:active {
-  @media screen and (min-width: 1024px) {
-    scale: 4;
-  }
 }
 
 #textContainer {
@@ -20,7 +13,7 @@
   }
 }
 
-#textContainer > * {
+#textContainer>* {
   margin-top: 0.75rem;
 }
 
@@ -39,73 +32,185 @@
   }
 }
 
-.project {
+
+/* intro styles */
+
+#intro {
+  width: 80vw;
+
+  display: grid;
+  column-gap: 1rem;
+
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+
+  grid-template-rows: auto auto;
+
+  grid-template-areas:
+    "name  name  pr club"
+    "status status greyback school";
+
+  @media (max-width: 1024px) {
+    grid-template-columns: 1fr;
+
+    grid-template-areas:
+      "name"
+      "status"
+      "pr"
+      "club"
+      "greyback"
+      "school";
+  }
+}
+
+#name {
+  grid-area: name;
+}
+
+#status {
+  grid-area: status;
+}
+
+#pr-role {
+  grid-area: pr;
+}
+
+#club-role {
+  grid-area: club;
+}
+
+#greyback-role {
+  grid-area: greyback;
+}
+
+#school-year {
+  grid-area: school;
+}
+
+
+/* projects slideshow */
+
+.slideshow {
   border-radius: 2rem;
   border: 5px dashed var(--primary-color);
 
-  display: flex;
 
-  flex-direction: row;
+  margin: auto;
 
-  height: 30vh;
-  width: 40vw;
+  width: min(90vw, 1200px);
+  height: 50vh;
 
-  /* @media screen and (max-width: 1400px) {
+  @media screen and (max-width: 1024px) {
     width: 80vw;
-  } */
-
-  @media screen and (max-width: 1024px) {
-    height: unset;
-    width: 90vw;
-    flex-direction: column;
+    height: 70vh;
   }
-
-  margin: 1rem;
 }
 
-.project img {
-  border-radius: 1.85rem 0 0 1.85rem;
+
+.project {
+  display: grid;
+
+  gap: 1vw;
+
   height: 100%;
-  width: 100%;
-  object-fit: cover;
+
+  grid-template-rows: minmax(0, 1fr);
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+
+  .image {
+    grid-area: image;
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .description {
+    margin: 1rem;
+    grid-area: description;
+  }
+
+  grid-template-areas: "image image image image image description description";
 
   @media screen and (max-width: 1024px) {
-    border-radius: 1.85rem 1.85rem 0 0;
-    width: 100%;
-    height: unset;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto auto;
+
+    grid-template-areas:
+      "image"
+      "image"
+      "image"
+      "description"
+      "description";
   }
 }
 
-.project > * {
-  flex: 1;
-}
-
-.projectDescription {
-  padding: 1rem;
-}
-
-.projects {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.hardwareProjects {
+.projectsList {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
-  margin-bottom: 2rem;
 }
 
-.hardwareProjects > div {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 1rem;
+.projectsList>ul {
+  margin-top: 2rem;
+  width: 90%;
 }
 
-.hardwareProjects > div img:first-of-type {
-  height: max(12vh, 12vw);
-  width: auto;
+
+/* 4 corners images */
+
+.square4image {
+  display: grid;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+  grid-template-rows: minmax(0, 1fr) minmax(0, 1fr);
+
+
+  height: 100%;
+}
+
+.square4image a,
+.square4image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.fourcolumnimage {
+  display: grid;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+  grid-template-rows: minmax(0, 1fr);
+
+  height: 100%;
+}
+
+.fourcolumnimage a,
+.fourcolumnimage img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.bigcolumnsmallrowsimage {
+  display: grid;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+  grid-template-rows: minmax(0, 1fr) minmax(0, 1fr);
+
+  grid-template-areas:
+    "big smalltop"
+    "big smallbottom";
+
+  height: 100%;
+}
+
+.bigcolumnsmallrowsimage a,
+.bigcolumnsmallrowsimage img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.bigcolumnsmallrowsimage .big {
+  grid-area: big;
 }
