--- a/index.css
+++ b/index.css
@@ -3,6 +3,15 @@
   height: auto;
 }
 
+/* mobile + bye = mobye :joy: */
+.mobye {
+  display: inherit;
+
+  @media screen and (max-width: 1024px) {
+    display: none;
+  }
+}
+
 #textContainer {
   display: flex;
   flex-direction: column;
@@ -114,7 +123,7 @@
   height: 100%;
 
   grid-template-rows: minmax(0, 1fr);
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 5fr 2fr;
 
   .image {
     grid-area: image;
@@ -129,17 +138,14 @@
     grid-area: description;
   }
 
-  grid-template-areas: "image image image image image description description";
+  grid-template-areas: "image description";
 
   @media screen and (max-width: 1024px) {
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-rows: minmax(0, 5fr) minmax(0, 2fr);
 
     grid-template-areas:
       "image"
-      "image"
-      "image"
-      "description"
       "description";
   }
 }
